<resources>
    <string name="app_name">智慧油罐</string>
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="tip_user_name">请输入账号</string>
    <string name="tip_password">请输入密码</string>
    <string name="oil_management">油站管理</string>
    <string name="real_time_storage">实时罐存</string>
    <string name="setting">设置</string>
    <string name="alarm_push">报警推送</string>
    <string name="quit">退出登录</string>

    <string name="station_amount">油站数量:</string>
    <string name="online">在线:</string>
    <string name="offline">离线:</string>
    <string name="inv">罐存</string>
    <string name="alarm">报警</string>
    <string name="delivery">进油</string>
    <string name="tank">油罐:</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="start_time_hint">选择开始时间</string>
    <string name="end_time_hint">选择结束时间</string>
    <string name="reset">重置</string>
    <string name="search">查询</string>
    <string name="all">全部</string>
    <string name="tip_start_time">请选择开始时间</string>
    <string name="tip_end_time">请选择结束时间</string>
    <string name="collect_time">最新数据采集时间:</string>
    <string name="fuel_level">油高(mm):</string>
    <string name="capacity">总容(L):</string>
    <string name="water_level">水高(mm):</string>
    <string name="temperature">温度(℃):</string>
    <string name="fuel_vol">存量</string>
    <string name="total">总容</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tip_account_error">账户或者密码错误</string>
    <string name="online_bracket">(在线)</string>
    <string name="offline_bracket">(离线)</string>
    <string name="vol_short">存</string>
    <string name="capacity_short">总</string>
    <string name="operator">操作员:</string>
    <string name="volume">进油量:</string>
    <string name="add_before">进油前:</string>
    <string name="add_after">进油后:</string>
    <string name="alarm_water_float">水浮子无效</string>
    <string name="alarm_probe">检测不到探棒数据</string>
    <string name="alarm_low_tmp">低温报警</string>
    <string name="alarm_high_tmp">高温报警</string>
    <string name="alarm_water_low">低水位报警</string>
    <string name="alarm_water_high">高水位报警</string>
    <string name="alarm_fuel_low">低油位报警</string>
    <string name="alarm_fuel_high">高油位报警</string>
    <string name="tip_net_error">网络异常</string>
    <string name="tip_result_null">查询结果为空</string>
    <string name="loading">加载中</string>
    <string name="load_no_more">已无更多数据</string>
</resources>
