<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miaoxing.nettank.ui.info.StationDeliveryFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="@dimen/space_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tank"
            android:layout_marginLeft="@dimen/space_l"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_tank"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/s_bg_5dp"
            android:padding="@dimen/space_s"
            android:layout_marginRight="@dimen/title_bar_height"
            android:text="@string/all"
            android:drawableRight="@drawable/ic_arrow_down"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/space_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:layout_marginLeft="@dimen/space_l"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/s_bg_5dp"
            android:padding="@dimen/space_s"
            android:hint="@string/start_time_hint"
            android:layout_marginRight="@dimen/title_bar_height"
            android:drawableRight="@drawable/ic_arrow_down"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/space_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_marginLeft="@dimen/space_l"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/s_bg_5dp"
            android:padding="@dimen/space_s"
            android:hint="@string/end_time_hint"
            android:layout_marginRight="@dimen/title_bar_height"
            android:drawableRight="@drawable/ic_arrow_down"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/title_bar_height"
        android:layout_marginTop="@dimen/title_bar_height">
        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="65dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:text="@string/reset"
            android:background="@drawable/sl_reset"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_search"
            android:layout_width="65dp"
            android:layout_height="24dp"
            android:layout_toLeftOf="@id/tv_reset"
            android:text="@string/search"
            android:gravity="center"
            android:layout_marginRight="@dimen/space_m"
            android:textColor="@color/white"
            android:background="@drawable/sl_search"/>
    </RelativeLayout>
</LinearLayout>
