<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/login">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="150dp"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/space_l"
        android:layout_marginRight="@dimen/space_l"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="@dimen/space_s"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/space_l"
        android:layout_marginRight="@dimen/space_l"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:digits="@string/digits"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/space_s"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_l"
        android:layout_marginRight="@dimen/space_l"
        android:layout_marginTop="30dp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="中文简体"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/space_l"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/space_l"
        android:padding="@dimen/space_s"
        android:textColor="@color/tertiaryText"
        android:background="?selectableItemBackground"/>
</LinearLayout>