<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/oil_management"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tv_right"
            android:layout_width="@dimen/bottom_bar_height"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_small"
            android:text="@string/setting"
            android:background="?selectableItemBackgroundBorderless"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/space_l"
            android:gravity="center"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/real_time_storage"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/secondaryText"
        android:padding="@dimen/space_s"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fuel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="@dimen/space_m"
        android:paddingRight="@dimen/space_m">
    </androidx.recyclerview.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_station_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_amount"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/tertiaryText"/>
        <TextView
            android:id="@+id/tv_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_station_amount"
            android:layout_marginLeft="@dimen/space_m"
            android:text="@string/online"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/tertiaryText"
            />
        <TextView
            android:id="@+id/tv_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_online"
            android:layout_marginLeft="@dimen/space_m"
            android:text="@string/offline"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/tertiaryText"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_station"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>