<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_m"
        android:paddingBottom="@dimen/space_m"
        android:paddingLeft="@dimen/space_m">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_launcher">
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/space_m"
                android:layout_marginLeft="@dimen/space_m">
                <TextView
                    android:id="@+id/tv_tank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01号罐"/>
                <TextView
                    android:id="@+id/tv_fuel_vol"
                    android:layout_marginTop="@dimen/space_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0L"/>
                <TextView
                    android:id="@+id/tv_percent"
                    android:layout_marginTop="@dimen/space_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_fuel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ll"
                android:layout_marginTop="@dimen/space_m"
                android:text="0#"
                android:layout_marginLeft="@dimen/space_s"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/space_l">
            <TextView
                android:id="@+id/tv_fuel_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_level"/>
            <TextView
                android:id="@+id/tv_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/capacity"/>
            <TextView
                android:id="@+id/tv_water_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/water_level"/>
            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/temperature"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>