<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.StationInfoActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_arrow_left"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/space_m"
            android:background="?selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/inv"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:orientation="horizontal">
        <RadioButton
            android:background="@drawable/sl_tab"
            android:checked="true"
            android:id="@+id/rb_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/inv"
            android:textColor="@color/white"
            android:drawableTop="@drawable/ic_tank_pressed"/>
        <RadioButton
            android:background="@drawable/sl_tab"
            android:checked="false"
            android:id="@+id/rb_alarm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/alarm"
            android:textColor="@color/white"
            android:drawableTop="@drawable/ic_alarm_default"/>
        <RadioButton
            android:background="@drawable/sl_tab"
            android:checked="false"
            android:id="@+id/rb_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/delivery"
            android:textColor="@color/white"/>
    </RadioGroup>

</LinearLayout>